<resources>
    <string name="app_name">면뽀</string>
    <string name="input_social_login_hint">소셜 계정으로 로그인 해주세요!</string>
    <string name="email_login">이메일로 로그인</string>
    <string name="input_email_hint">이메일을 입력해 주세요.</string>
    <string name="input_password_hint">비밀번호를 입력해 주세요.</string>
    <string name="sign_in">로그인</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="sign_up">회원가입</string>
    <string name="input_repassword_hint">다시한번 비밀번호를 입력해 주세요.</string>
    <string name="set_tech_text">당신의 직무는\n어디 인가요?</string>
    <string name="onboarding_number_one">1/2</string>
    <string name="tech_frontend">FRONT-END</string>
    <string name="tech_backend">BACK_END</string>
    <string name="tech_android">ANDROID</string>
    <string name="tech_ios">IOS</string>
    <string name="tech_data">DATA</string>
    <string name="set_nick_text">닉네임을\n설정하세요.</string>
    <string name="onboarding_number_two">2/2</string>
    <string name="input_nick_hint">닉네임 (최소 2자 이상 입력)</string>
    <string name="complete_signup">가입완료</string>
    <string name="find_email_hint">가입한 이메일을 입력해 주세요</string>
    <string name="find_password_button">비밀번호 재설정 메일 보내기</string>
    <string name="level_test">레벨 테스트</string>
    <string name="pre_test_result">이전 테스트 결과보기</string>
    <string name="make_problem">문제 출제하기</string>
    <string name="test">테스트</string>
    <string name="easy_learning">간편학습</string>
    <string name="community">커뮤니티</string>
    <string name="recommend_book">추천책</string>
    <string name="choose_tech">상단 카테고리에서\n기술스택을 선택해주세요.</string>
    <string name="easy_learning_expert_text">전문가의 신뢰성있는\n기술면접 문제를 제공해드려요.</string>
    <string name="start_learning">학습시작</string>
    <string name="check_answer">답변확인</string>
    <string name="problem_number">Question%2d</string>
    <string name="start_learning_tech">%1s\n학습을 시작하시겠습니까?</string>
    <string name="start_test_tech">%1s\n테스트를 시작하시겠습니까?</string>
    <string name="input_answer">답안을 작성해 주세요</string>
    <string name="left_problem">%2d문제 남았어요</string>
    <string name="submission_text">제출하기</string>
    <string name="timer">%02d:%02d</string>
    <string name="question_text">질문</string>
    <string name="study_text">스터디</string>
    <string name="jobreview_text">채용후기</string>
    <string name="jobposting_text">채용공고</string>
    <string name="full_text">전체</string>
    <string name="more_jobposting">채용공고 더보기</string>
    <string name="jobreview">채용후기</string>
    <string name="more">더보기</string>
    <string name="study">스터디</string>
    <string name="question">질문</string>
    <string name="vieworder">조회순</string>
    <string name="neworder">최신순</string>
    <string name="write">글쓰기</string>
    <string name="input_search">검색어를 입력해주세요.</string>
    <string name="cancel_text">취소</string>
    <string name="recent_search">최근 검색어</string>
    <string name="full_delete">전체 삭제</string>
    <string name="community_jobposting">채용공고 게시판</string>
    <string name="link">링크</string>
    <string name="date">날짜</string>
    <string name="content">내용</string>
    <string name="community_jobreview">채용후기 게시판</string>
    <string name="view_count">조회 수</string>
    <string name="comment_count">댓글 수</string>
    <string name="like">좋아요</string>
    <string name="scrab">스크랩</string>
    <string name="modify">수정</string>
    <string name="delete">삭제</string>
    <string name="community_study">스터디 게시판</string>
    <string name="mintier">최소 :</string>
    <string name="maxtier">최대 :</string>
    <string name="community_question">질문 게시판</string>
    <string name="email_auth">이메일 인증</string>송
    <string name="transmit_text">전송</string>
    <string name="retransmit_text">재전송</string>
    <string name="certification_hint_text">인증번호를 입력해 주세요.</string>
    <string name="check_text">확인</string>
    <string name="certification_transmit_text">인증번호 받기</string>
    <string name="per_week_text">주%2d회</string>
    <string name="vote_count_text">vote +%2d</string>목
    <string name="title">제목</string>
    <string name="tech_stack">기술스택</string>
    <string name="career">경력</string>
    <string name="input_title_text">제목을 입력해주세요.</string>
    <string name="input_link_text">채용공고 링크를 입력해주세요.</string>
    <string name="input_career_text">경력을 입력해주세요.</string>
    <string name="input_content_textview">내용을 입력해주세요.</string>
    <string name="tech_drop_text">기술스택을 선택해주세요.</string>
    <string name="wave_text">~</string>
    <string name="start_end_date_text">%1s</string>
    <string name="https_text">https://</string>
    <string name="job_posting_date_input">채용공고 날짜를 입력해주세요.</string>
    <string name="pass_fail_text">합격여부</string>
    <string name="pass_fail_choice_text">합격여부를 선택해주세요.</string>
    <string name="process_text">채용전형</string>
    <string name="process_choice_text">채용전형을 선택해주세요.</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="reset">RESET</string>
    <string name="open_chat_text">오픈채팅방 링크</string>
    <string name="study_on_off_text">스터디 방식</string>
    <string name="on_off_input_hint">스터디 방식을 선택해주세요.</string>
    <string name="study_per_week_text">스터디 횟수</string>
    <string name="per_week_input_hint">주간 스터디 횟수를 선택해주세요.</string>
    <string name="min_tier_text">최소 티어</string>
    <string name="min_tier_input_text">최소 티어를 선택해주세요.</string>
    <string name="max_tier_text">최대 티어</string>
    <string name="max_tier_input_hint">최대 티어를 선택해주세요.</string>
    <string name="day_choose_text">요일 선택</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="sunday">일</string>
    <string name="dialog_delete_title">해당 게시글을 삭제하시겠습니까?</string>
    <string name="modify_button_text">수정하기</string>
    <string name="comment_count_text">(%2d)</string>
    <string name="per_week_count_text">주%2d회</string>
</resources>