<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:background="@color/transparent"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/spoqa_han_sans_neo_regular"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/title_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/light_gray_background"
                android:fontFamily="@font/spoqa_han_sans_neo_regular"
                android:hint="@string/input_title_text"
                android:inputType="text"
                android:padding="15dp"
                android:textColorHint="@color/gray"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_textview" />

            <TextView
                android:id="@+id/techstack_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/spoqa_han_sans_neo_regular"
                android:text="@string/tech_stack"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_edittext" />

            <TextView
                android:id="@+id/tech_alert_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/light_gray_background"
                android:fontFamily="@font/spoqa_han_sans_neo_regular"
                android:padding="15dp"
                android:text="@string/tech_drop_text"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:drawableRightCompat="@drawable/more"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/techstack_textview" />

            <TextView
                android:id="@+id/link_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/spoqa_han_sans_neo_regular"
                android:text="@string/link"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tech_alert_textview" />

            <EditText
                android:id="@+id/link_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/light_gray_background"
                android:fontFamily="@font/spoqa_han_sans_neo_regular"
                android:inputType="textUri"
                android:padding="15dp"
                android:text="@string/https_text"
                android:textColorHint="@color/gray"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/link_textview" />

            <TextView
                android:id="@+id/career_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/spoqa_han_sans_neo_regular"
                android:text="@string/career"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/link_edittext" />

            <EditText
                android:id="@+id/career_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/light_gray_background"
                android:fontFamily="@font/spoqa_han_sans_neo_regular"
                android:hint="@string/input_career_text"
                android:inputType="text"
                android:padding="15dp"
                android:textColorHint="@color/gray"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/career_textview" />

            <TextView
                android:id="@+id/date_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/spoqa_han_sans_neo_regular"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/career_edittext" />

            <TextView
                android:id="@+id/date_picker_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/light_gray_background"
                android:fontFamily="@font/spoqa_han_sans_neo_regular"
                android:padding="15dp"
                android:text="@string/job_posting_date_input"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:drawableRightCompat="@drawable/calendar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date_textview" />

            <TextView
                android:id="@+id/content_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/spoqa_han_sans_neo_regular"
                android:text="@string/content"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date_picker_textview" />

            <EditText
                android:id="@+id/content_edittext"
                android:layout_width="0dp"
                android:layout_height="240dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/light_gray_background"
                android:fontFamily="@font/spoqa_han_sans_neo_regular"
                android:gravity="top"
                android:hint="@string/input_content_textview"
                android:inputType="textMultiLine"
                android:padding="15dp"
                android:textColorHint="@color/gray"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/content_textview" />

            <TextView
                android:id="@+id/write_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="46dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/blue_background"
                android:fontFamily="@font/jeju_gothic"
                android:gravity="center"
                android:paddingVertical="20dp"
                tools:text="@string/write"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/content_edittext" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>



