<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.SignUpFragment">

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:background="@color/transparent"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sign_up_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/spoqa_han_sans_neo_bold"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button" />

    <EditText
        android:id="@+id/email_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/light_gray_background"
        android:fontFamily="@font/spoqa_han_sans_neo_regular"
        android:hint="@string/input_email_hint"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColorHint="@color/gray"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@id/transmit_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_textview" />

    <TextView
        android:id="@+id/transmit_textview"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:background="@drawable/sky_blue_background"
        android:fontFamily="@font/jeju_gothic"
        android:gravity="center"
        android:paddingVertical="15dp"
        android:text="@string/transmit_text"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/email_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/email_edittext"
        app:layout_constraintTop_toTopOf="@id/email_edittext" />

    <EditText
        android:id="@+id/certification_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/light_gray_background"
        android:fontFamily="@font/spoqa_han_sans_neo_regular"
        android:hint="@string/certification_hint_text"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/check_certification_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_edittext"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/check_certification_textview"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:background="@drawable/sky_blue_background"
        android:fontFamily="@font/jeju_gothic"
        android:gravity="center"
        android:paddingVertical="15dp"
        android:text="@string/check_text"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/certification_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/certification_edittext"
        app:layout_constraintTop_toTopOf="@id/certification_edittext" />


    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/light_gray_background"
        android:fontFamily="@font/spoqa_han_sans_neo_regular"
        android:hint="@string/input_password_hint"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColorHint="@color/gray"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/certification_edittext" />

    <EditText
        android:id="@+id/re_password_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/light_gray_background"
        android:fontFamily="@font/spoqa_han_sans_neo_regular"
        android:hint="@string/input_repassword_hint"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColorHint="@color/gray"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_edittext" />

    <TextView
        android:id="@+id/sign_up_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/blue_background"
        android:fontFamily="@font/jeju_gothic"
        android:gravity="center"
        android:paddingVertical="20dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/re_password_edittext" />

</androidx.constraintlayout.widget.ConstraintLayout>