<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.community.CommunityActivity">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:background="@color/transparent"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/community_tab_linearlayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="29dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button">

        <TextView
            android:id="@+id/full_community_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selected_tab"
            android:fontFamily="@font/spoqa_han_sans_neo_regular"
            android:paddingHorizontal="10dp"
            android:paddingVertical="8dp"
            android:text="@string/full_text"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/jobposting_community_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/unselected_tab"
            android:fontFamily="@font/spoqa_han_sans_neo_regular"
            android:paddingHorizontal="10dp"
            android:paddingVertical="8dp"
            android:text="@string/jobpostion_text"
            android:textColor="@color/gray"
            android:textSize="15sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/jobreview_community_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/unselected_tab"
            android:fontFamily="@font/spoqa_han_sans_neo_regular"
            android:paddingHorizontal="10dp"
            android:paddingVertical="8dp"
            android:text="@string/jobreview_text"
            android:textColor="@color/gray"
            android:textSize="15sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/study_community_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/unselected_tab"
            android:fontFamily="@font/spoqa_han_sans_neo_regular"
            android:paddingHorizontal="10dp"
            android:paddingVertical="8dp"
            android:text="@string/study_text"
            android:textColor="@color/gray"
            android:textSize="15sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/question_community_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/unselected_tab"
            android:fontFamily="@font/spoqa_han_sans_neo_regular"
            android:paddingHorizontal="10dp"
            android:paddingVertical="8dp"
            android:text="@string/question_text"
            android:textColor="@color/gray"
            android:textSize="15sp" />

    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/community_tab_linearlayout"
        app:navGraph="@navigation/community_navigation_graph" />

</androidx.constraintlayout.widget.ConstraintLayout>